# Automa---Codex

./: .gitignore  AGENTS.md  COMMIT_MSG.txt  COMMIT_MSG2.txt  COMMIT_MSG3.txt  COMMIT_MSG4.txt  COMMIT_MSG5.txt  COMMIT_MSG6.txt  COMMIT_MSG7.txt  COMMIT_MSG8.txt  COMMIT_MSG9.txt  POSTUP.md  README.md  TMP_COMMIT_MSG2.txt  alembic.ini  automa.db  err.txt  main.py  pyproject.toml  zadanie.md
alembic/: README  env.py
alembic/versions/: 0001_baseline.py
automa/api/: app.py  deps.py
automa/api/routes/: agents.py  auth.py  health.py  jobs.py  scripts.py  ui.py  users.py
automa/core/: config.py  db.py  security.py
automa/domain/: models.py  repo.py
automa/sandbox/: docker_runner.py
automa/scheduler/: manager.py
automa/web/static/: app.js  index.html  style.css
automa/web/templates/: base.html  index.html
automa/web/templates/partials/: agents_list.html  jobs_list.html  login_status.html  profile.html  scripts_list.html
scripts/: check_import.py  smoke_test.py
tests/: test_auth_and_agents.py  test_health.py  test_jobs.py
